fondo en index color narajan

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
     <style>
         body{
-            background-color:#967E74;
+            background-color:#ec520f;
         }
     </style>
 </head>
